kubecost/kubecost_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    meta.helm.sh/release-name: kubecost
    meta.helm.sh/release-namespace: kubecost
  labels:
    app: cost-analyzer
    app.kubernetes.io/instance: kubecost
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cost-analyzer
    helm.sh/chart: cost-analyzer-1.92.0
  name: kubecost-cost-analyzer
  namespace: kubecost
spec:
  ingressClassName: alb
  rules:
  - host: kubecost.IP_ADDRESS_OF_THE_KUBECOST_ALB.nip.io
    http:
      paths:
      - backend:
          service:
            name: kubecost-cost-analyzer
            port:
              name: tcp-frontend
        path: /
        pathType: Prefix
